--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js"></script>
     <title>Calculador Juros Compostos</title>
-</head>
-<body>
-    <h1>Calculadora</h1>
+  </head>
+  <body>
 
+    <main id="container">
+        <div id="calculator">
+            <h2>Calculadora de Juros Compostos</h2>
 
-</body>
+            <div id="input_box">
+                <div class="input-field">
+                    <label for="value">Valor Inicial (Capital): </label>
+                    <input type="number" id="value">
+                </div>
+
+                <div class="input-field">
+                    <label for="fee">Taxa de Juros a.m: </label>
+                    <input type="number" id="fee">
+                </div>
+                
+                <div class="input-field">
+                    <label for="time">Tempo de Rendimento a.m: </label>
+                    <input type="number" id="time">
+                </div>
+            </div>
+
+            <div id="result">
+                <h4>Resultado:</h4>
+                <span id="total">R$ 0,00</span>
+            </div>
+
+            <button id="calculate">Calcular</button>
+        </div>
+    </main>
+
+  </body>
 </html>
