--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 </div>
 
                 <div class="input-field">
-                    <label for="fee">Taxa de Juros a.m: </label>
+                    <label for="fee">Taxa de Juros (a.m): </label>
                     <input type="number" id="fee">
                 </div>
                 
                 <div class="input-field">
-                    <label for="time">Tempo de Rendimento a.m: </label>
+                    <label for="time">Tempo de Rendimento (a.m): </label>
                     <input type="number" id="time">
                 </div>
             </div>
